<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingStart="8dp"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="8dp"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/edtEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEnterLogin"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/hintPassword"/>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
       android:layout_below="@id/edtEnterPassword"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btnsEnter" />

    <TextView
        android:id="@+id/tvAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEnterPassword"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:text="@string/attempts"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tvNumberOfAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEnterPassword"
        android:layout_toRightOf="@id/tvAttempts"
        android:layout_marginTop="25dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvLoginIsLocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"
        android:layout_below="@id/tvAttempts"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/tvEnter" />

    <EditText
        android:id="@+id/edtEnterLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLoginText"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hintLogin" />


</RelativeLayout>