<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivity"
    android:padding="16dp"
    android:paddingStart="8dp"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingRight="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tvOrderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:visibility="visible"
        android:textSize="25sp"
        android:text="@string/order_text"

        />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/button_start"
        android:layout_below="@id/tvOrderInfoText"
        android:visibility="visible"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:text="@string/button_end"
        android:layout_below="@id/btnStart"
        android:layout_marginTop="5dp"

        />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvOrderInfoText"
        android:layout_marginTop="65dp"
        android:visibility="visible"
         />

    <TextView
        android:id="@+id/tvTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:text="@string/time_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/tvOrderInfoText"/>

    <TextView
        android:id="@+id/tvOrderInfoText"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="362dp"
        android:layout_below="@id/tvOrderText"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="TextView"
        />

    <TextView
        android:id="@+id/tvNoOrdersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textSize="40sp"

        android:text="@string/no_orders" />

</RelativeLayout>